[metadata]
name = bycore
version = 0.0.2
author = master
author_email = masterrr314@gmail.com
description = Bypass Core package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/masterr314/bycore
project_urls =
   Bug Tracker = https://github.com/masterr314/bycore/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.9.7

[options.packages.find]
where = src